# MIREATESTS

./: README.md  main.py  pyproject.toml
src/application/controllers/: parserconsole.py  parserdatabase.py
src/application/database/models/: unit.py
src/application/database/usecase/: unit.py
src/application/database/utils/: querries.py  session.py
src/application/utils/: menu.py
src/application/web/: connector.py  parser.py
src/config/: constants.py  urls.py
